--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title><Class-43></title>
-    <link rel="stylesheet" href="Style43.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
