--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 
 <div>
-    <img src="Image/Picture.jpg" alt="">
+    <img src="Picture.jpg" alt="">
     
 </div><br><br>
 <div class="mask">
-    <img src="Image/BG.jpg" alt="">
+    <img src="BG.jpg" alt="">
 </div>
 
 </body>
